--- a/main.css
+++ b/main.css
@@ -29,7 +29,7 @@ body {
   font-weight: 500;
   font-size: 40px;
   line-height: 55px;
-  color: #6d6862;
+  color: #000000;
   text-align: center;
 }
 
@@ -46,7 +46,7 @@ body {
 p {
   font-size: 36px;
   font-family: Arial;
-  color: rgba(45, 45, 45, 0.6);
+  color: rgba(0, 0, 0, 0.6);
   line-height: 50px;
   text-align: center;
 }
